CB-12852 DH couldn't be created because of n+1 query error
Increase test node count for upscale and downscale to check large clusters.
Enable batch inserts and updates.
Run fetch and saveAll in one transaction otherwise hibernate detaches the loaded entites and it will run a select for every entity during saveAll.